--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
         `<div class="proverb">🌟 I radiate positivity, and luck flows effortlessly toward me. 🌟</div><div class="source">Luck Affirmation</div>`,
         `<div class="proverb">🌟 I am the operant power in my life, and I create my reality through my thoughts. 🌟</div><div class="source">Neville Goddard</div>`,
         `<div class="proverb">💰 Wealth is my divine right, and I claim it now. 💰</div><div class="source">Neville Goddard</div>`,
-        `<div class="proverb">🌿 I am now in perfect health, and I radiate vitality and strength. 🌿</div><div class="source">Florence Scovel Shinn</div>`,
-        `<div class="proverb">🍀 My thoughts are creative, and I imagine myself living in abundance and prosperity. 🍀</div><div class="source">Neville Goddard</div>`,
+        `<div class="proverb">🌿 I am in perfect health, and I radiate vitality and strength. 🌿</div><div class="source">Florence Scovel Shinn</div>`,
+        `<div class="proverb">🍀 My thoughts are creative, and I am living in abundance and prosperity. 🍀</div><div class="source">Neville Goddard</div>`,
         `<div class="proverb">🌟 I am one with the infinite source of all good, and I am worthy of its blessings. 🌟</div><div class="source">Florence Scovel Shinn</div>`,
         `<div class="proverb">💫 I accept that all good things are already mine. I believe in the divine flow of prosperity. 💫</div><div class="source">Neville Goddard</div>`,
         `<div class="proverb">💪 I visualize myself in perfect health, and my body responds with vitality and energy. 💪</div><div class="source">Florence Scovel Shinn</div>`,
@@ -152,7 +152,6 @@
         `<div class="proverb">💰 I am in divine order and am receiving limitless opportunities for wealth and abundance. 💰</div><div class="source">Florence Scovel Shinn</div>`,
         `<div class="proverb">🌱 I am thankful for the health that is now manifesting in my body and mind. 🌱</div><div class="source">Florence Scovel Shinn</div>`,
         `<div class="proverb">💫 I vividly imagine myself successful, and I attract success with every thought. 💫</div><div class="source">Neville Goddard</div>`,
-        `<div class="proverb">💖 I am now free from all limiting beliefs, and I claim my health, wealth, and happiness. 💖</div><div class="source">Florence Scovel Shinn</div>`,
         `<div class="proverb">💸 My subconscious mind is programmed for abundance, and wealth flows to me effortlessly. 💸</div><div class="source">Neville Goddard</div>`,
         `<div class="proverb">🍀 I give thanks for the endless supply of good fortune, and it multiplies each day. 🍀</div><div class="source">Neville Goddard</div>`,
         `<div class="proverb">💪 I am the picture of perfect health, and my body is a reflection of my vibrant energy. 💪</div><div class="source">Florence Scovel Shinn</div>`,
@@ -228,9 +227,7 @@
         `<div class="proverb">🧠 A well-fed mind is a better weapon than a well-fed stomach. 🧠</div><div class="source">Indian Proverb</div>`,
         `<div class="proverb">🍇 Patience is a bitter plant, but it has sweet fruit. 🍇</div><div class="source">German Proverb</div>`,
         `<div class="proverb">🪴 Do not look where you fell, but where you slipped. 🪴</div><div class="source">African Proverb</div>`,
-        `<div class="proverb">🐱 Rats don’t play in the cat’s door. 🐱</div><div class="source">Ghanaian Proverb</div>`,
         `<div class="proverb">🦁 When the lion is not there, the antelope dances. 🦌</div><div class="source">Zulu Proverb</div>`,
-        `<div class="proverb">🧣 A single bracelet does not jingle. 🧣</div><div class="source">Congolese Proverb</div>`,
         `<div class="proverb">🌾 You learn how to cut the grass by cutting it. 🌾</div><div class="source">Tanzanian Proverb</div>`,
         `<div class="proverb">🧭 He who has a why to live can bear almost any how. 🧭</div><div class="source">German Proverb</div>`,
         `<div class="proverb">🥚 Don’t put all your eggs in one basket. 🥚</div><div class="source">Spanish Proverb</div>`,
@@ -239,7 +236,6 @@
         `<div class="proverb">🐺 When the wolf is hungry, he doesn't care about the sheep’s religion. 🐑</div><div class="source">Arab Proverb</div>`,
         `<div class="proverb">⏳ If you wish to be rich, do not save money, but save time. ⏳</div><div class="source">Chinese Proverb</div>`,
         `<div class="proverb">🌲 You cannot hide a large tree under a small shrub. 🌿</div><div class="source">Indian Proverb</div>`,
-        `<div class="proverb">💔 A broken heart is like a broken mirror. 💔</div><div class="source">Russian Proverb</div>`,
         `<div class="proverb">🌌 The unexamined life is not worth living. 🌌</div><div class="source">Socrates</div>`,
         `<div class="proverb">✨ In the middle of difficulty lies opportunity. ✨</div><div class="source">Albert Einstein</div>`,
         `<div class="proverb">🌀 What you seek is seeking you. 🌀</div><div class="source">Rumi</div>`,
@@ -253,9 +249,6 @@
         `<div class="proverb">🌟 To live is the rarest thing in the world. Most people exist, that is all. 🌟</div><div class="source">Oscar Wilde</div>`,
         `<div class="proverb">🌏 Everything has beauty, but not everyone sees it. 🌏</div><div class="source">Confucius</div>`,
         `<div class="proverb">🔗 The only way to deal with fear is to face it head-on. 🔗</div><div class="source">James Baldwin</div>`,
-        `<div class="proverb">🌅 When we are no longer able to change a situation, we are challenged to change ourselves. 🌅</div><div class="source">Viktor Frankl</div>`,
-        `<div class="proverb">🎨 Every man takes the limits of his own field of vision for the limits of the world. 🎨</div><div class="source">Arthur Schopenhauer</div>`,
-        `<div class="proverb">💎 The greatest glory in living lies not in never falling, but in rising every time we fall. 💎</div><div class="source">Nelson Mandela</div>`,
         `<div class="proverb">🪞 Knowing yourself is the beginning of all wisdom. 🪞</div><div class="source">Aristotle</div>`,
         `<div class="proverb">🌌 You cannot step twice into the same river, for other waters are continually flowing on. 🌌</div><div class="source">Heraclitus</div>`,
         `<div class="proverb">🌺 Your task is not to seek for love, but merely to seek and find all the barriers within yourself that you have built against it. 🌺</div><div class="source">Rumi</div>`,
@@ -267,11 +260,8 @@
         `<div class="proverb">🌌 We are what we repeatedly do. Excellence, then, is not an act, but a habit. 🌌</div><div class="source">Aristotle</div>`,
         `<div class="proverb">✨ The only thing necessary for the triumph of evil is for good men to do nothing. ✨</div><div class="source">Edmund Burke</div>`,
         `<div class="proverb">🕰️ Life is what happens when you're busy making other plans. 🕰️</div><div class="source">John Lennon</div>`,
-        `<div class="proverb">💭 Your work is going to fill a large part of your life, and the only way to be truly satisfied is to do what you believe is great work. 💭</div><div class="source">Steve Jobs</div>`,
         `<div class="proverb">🔥 The journey of a thousand miles begins with one step. 🔥</div><div class="source">Lao Tzu</div>`,
         `<div class="proverb">🌍 It does not matter how slowly you go as long as you do not stop. 🌍</div><div class="source">Confucius</div>`,
-        `<div class="proverb">🎯 It is never too late to be what you might have been. 🎯</div><div class="source">George Eliot</div>`,
-        `<div class="proverb">🌅 The only way to do great work is to love what you do. 🌅</div><div class="source">Steve Jobs</div>`,
         `<div class="proverb">🌳 Not everything that is faced can be changed, but nothing can be changed until it is faced. 🌳</div><div class="source">James Baldwin</div>`,
         `<div class="proverb">🌀 It is not the strongest of the species that survive, nor the most intelligent, but the one most responsive to change. 🌀</div><div class="source">Charles Darwin</div>`,
         `<div class="proverb">🌠 The only thing we have to fear is fear itself. 🌠</div><div class="source">Franklin D. Roosevelt</div>`,
@@ -299,7 +289,7 @@
         document.getElementById("aff").classList.add("active");
       }
 
-      setInterval(showRandomText, 9000);
+      setInterval(showRandomText, 11000);
       window.arraytoshow = proverbsArray;
       showRandomText(window.arraytoshow);
     </script>
